// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item Edit Page should render correctly 1`] = `
<div>
  <div
    class="sc-bdfBwQ jvFxvm"
  >
    <div
      class="sc-eCssSg fJaZbo"
    >
      <div
        class="spinner-border"
        role="status"
      >
        <span
          class="sr-only"
        >
          Loading...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Item Edit Page should render correctly with loading 1`] = `
<div>
  <div
    class="sc-eCssSg fJaZbo"
  >
    <div
      class="spinner-border"
      role="status"
    >
      <span
        class="sr-only"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;
